iop/ingress/ingress-phoenix.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mesh-ingress-base
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: iop-revad
          servicePort: 20080
      - path: /prometheus
        backend:
          serviceName: prometheus-server
          servicePort: 9090
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3030
      - path: /
        backend:
          serviceName: phoenix-svc
          servicePort: 8300
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mesh-ingress-data
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /data
spec:
  rules:
  - http:
      paths:
      - path: /api/data
        backend:
          serviceName: iop-revad
          servicePort: 11001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mesh-ingress-metrics
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /metrics
spec:
  rules:
  - http:
      paths:
      - path: /metrics
        backend:
          serviceName: iop-revad
          servicePort: 20080
