iop/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mesh-ingress-base
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: iop-gateway
          servicePort: 19001
      - path: /prometheus
        backend:
          serviceName: prometheus-server
          servicePort: 9090
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3030
      - path: /wopi
        backend:
          serviceName: iop-wopiserver
          servicePort: 8880
      - path: /data-home
        backend:
          serviceName: iop-storageprovider-home
          servicePort: 17001
      - path: /data-reva
        backend:
          serviceName: iop-storageprovider-reva
          servicePort: 18001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mesh-ingress-collabora
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /loleaflet
        backend:
          serviceName: collabora-collabora-code
          servicePort: 9980
      - path: /hosting
        backend:
          serviceName: collabora-collabora-code
          servicePort: 9980
      - path: /lool
        backend:
          serviceName: collabora-collabora-code
          servicePort: 9980
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mesh-ingress-grpc
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: h2c
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: iop-gateway
          servicePort: 19000
